// Vitest Snapshot v1

exports[`footnote > Can have arbitrary markup 1`] = `
"<p>foo<sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p> <em>bar</em>  <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Can inside blockquotes, and are lazy 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<blockquote></blockquote>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>bar
baz <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Duplicate footnotes should have suffix 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup> <sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1:1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1:1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>foo <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a> <a href=\\"#footnote-ref1:1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Indent 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup> <sup class=\\"footnote-ref\\"><a href=\\"#footnote2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref2\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><h2>foo</h2>
 <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></li>
<li id=\\"footnote2\\" class=\\"footnote-item\\"><h2>foo</h2>
 <a href=\\"#footnote-ref2\\" class=\\"footnote-backref\\">↩︎</a></li>
</ol>
</section>
"
`;

exports[`footnote > Indents for the first line 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup> <sup class=\\"footnote-ref\\"><a href=\\"#footnote2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref2\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>foo <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
<li id=\\"footnote2\\" class=\\"footnote-item\\"><pre><code>foo
</code></pre>
 <a href=\\"#footnote-ref2\\" class=\\"footnote-backref\\">↩︎</a></li>
</ol>
</section>
"
`;

exports[`footnote > Indents for the first line 2`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>foo <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Label cannot contain spaces or newlines 1`] = `
"<p>[^ foo]: bar baz</p>
<p>[^foo
]: bar baz</p>
"
`;

exports[`footnote > Nested footnotes 1`] = `
"<p>foo<sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup> bar<sup class=\\"footnote-ref\\"><a href=\\"#footnote2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref2\\" /></sup>.</p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"> <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></li>
<li id=\\"footnote2\\" class=\\"footnote-item\\"><p>baz <a href=\\"#footnote-ref2\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Pandoc example 1`] = `
"<p>Here is a footnote reference,<sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup> and another.<sup class=\\"footnote-ref\\"><a href=\\"#footnote2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref2\\" /></sup></p>
<p>This paragraph won’t be part of the note, because it
isn’t indented.</p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>Here is the footnote. <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
<li id=\\"footnote2\\" class=\\"footnote-item\\"><p>Here's one with multiple blocks.</p>
<p>Subsequent paragraphs are indented to show that they
belong to the previous footnote.</p>
<pre><code>{ some.code }
</code></pre>
<p>The whole paragraph can be indented, or just the first
line.  In this way, multi-paragraph footnotes work like
multi-paragraph list items. <a href=\\"#footnote-ref2\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Should allow links in inline footnotes 1`] = `
"<p>Example<sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>this is another example <a href=\\"https://github.com\\">https://github.com</a> <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Should contain Security 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>blah <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Should contain Security 2`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>blah <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Should support inline note 1`] = `
"<p>Here is an inline note.<sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>Inline notes are easier to write, since
you don’t have to pick an identifier and move down to type the
note. <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > Should terminate each other 1`] = `
"<p><sup class=\\"footnote-ref\\"><a href=\\"#footnote1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref1\\" /></sup><sup class=\\"footnote-ref\\"><a href=\\"#footnote2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref2\\" /></sup><sup class=\\"footnote-ref\\"><a href=\\"#footnote3\\">[3]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref3\\" /></sup></p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote1\\" class=\\"footnote-item\\"><p>foo <a href=\\"#footnote-ref1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
<li id=\\"footnote2\\" class=\\"footnote-item\\"><p>bar <a href=\\"#footnote-ref2\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
<li id=\\"footnote3\\" class=\\"footnote-item\\"><p>baz <a href=\\"#footnote-ref3\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;

exports[`footnote > custom docId in env 1`] = `
"<p>Here is a footnote reference,<sup class=\\"footnote-ref\\"><a href=\\"#footnote-test-doc-id-1\\">[1]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref-test-doc-id-1\\" /></sup> and another.<sup class=\\"footnote-ref\\"><a href=\\"#footnote-test-doc-id-2\\">[2]</a><a class=\\"footnote-anchor\\" id=\\"footnote-ref-test-doc-id-2\\" /></sup></p>
<p>This paragraph won’t be part of the note, because it
isn’t indented.</p>
<hr class=\\"footnotes-sep\\">
<section class=\\"footnotes\\">
<ol class=\\"footnotes-list\\">
<li id=\\"footnote-test-doc-id-1\\" class=\\"footnote-item\\"><p>Here is the footnote. <a href=\\"#footnote-ref-test-doc-id-1\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
<li id=\\"footnote-test-doc-id-2\\" class=\\"footnote-item\\"><p>Here's one with multiple blocks.</p>
<p>Subsequent paragraphs are indented to show that they
belong to the previous footnote.</p>
<pre><code>{ some.code }
</code></pre>
<p>The whole paragraph can be indented, or just the first
line.  In this way, multi-paragraph footnotes work like
multi-paragraph list items. <a href=\\"#footnote-ref-test-doc-id-2\\" class=\\"footnote-backref\\">↩︎</a></p>
</li>
</ol>
</section>
"
`;
